terraform/main.tf
resource "aws_security_group" "web_sg" {

  name = "${var.project_name}-sg"

  description = "Security Group for Network Assignment"

  vpc_id = var.vpc_id

  ingress {

    description = "SSH"

    from_port = 22

    to_port = 22

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  ingress {

    description = "HTTP"

    from_port = 80

    to_port = 80

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  egress {

    from_port = 0

    to_port = 0

    protocol = "-1"

    cidr_blocks = ["0.0.0.0/0"]

  }

  tags = {

    Name = "${var.project_name}-sg"

  }

}

resource "aws_instance" "web" {

  ami = var.ami_id

  instance_type = var.instance_type

  subnet_id = var.subnet_id

  key_name = var.key_name

  vpc_security_group_ids = [
    aws_security_group.web_sg.id
  ]

  associate_public_ip_address = true

  user_data = <<-EOF
                #!/bin/bash
                apt-get update -y
                apt-get install -y docker.io
                systemctl enable docker
                systemctl start docker
                usermod -aG docker ubuntu
                EOF
  tags = {

    Name = "${var.project_name}-ec2"

  }

}
